// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading H1 should have the right H1 css 1`] = `
.c0 {
  font-size: 46px;
  line-height: 56px;
  font-weight: bold;
  color: #4A4A4A;
  text-align: initial;
}

<h1
  className="c0"
/>
`;

exports[`Heading H2 should have the right H2 css 1`] = `
.c0 {
  font-size: 37px;
  line-height: 48px;
  font-weight: semi-bold;
  color: #4A4A4A;
  text-align: initial;
}

<div
  className="c0"
/>
`;

exports[`Heading H3 should have the right H3 css 1`] = `
.c0 {
  font-size: 28px;
  line-height: 36px;
  font-weight: semi-bold;
}

<div
  className="c0"
/>
`;

exports[`Heading H4 should have the right H4 css 1`] = `
.c0 {
  font-size: 22px;
  line-height: 28px;
  font-weight: semi-bold;
  color: #4A4A4A;
  text-align: initial;
}

<div
  className="c0"
/>
`;

exports[`Heading H5 should have the right H5 css 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  font-weight: semi-bold;
  color: #4A4A4A;
  text-align: initial;
}

<div
  className="c0"
/>
`;

exports[`Heading H6 should have the right H6 css 1`] = `
.c0 {
  font-size: 15px;
  line-height: 20px;
  font-weight: semi-bold;
  color: #4A4A4A;
  text-align: initial;
}

<div
  className="c0"
/>
`;
